--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html> <title>Talal Airlines</title>
+<html> <title>Pingy Airlines</title>
 <head>
-
-  
+<link rel="stylesheet" href="css/bootstrap.min.css">
+<link rel="stylesheet" href="css/stylesheet.css">
 </head>
-<body> </body>
+ <body> 
+   hi im pingyairlines ecks dhai
+   
+ </body>
 
 </html>
