--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html> <title>Pingy Airlines</title>
+<link rel="shortcut icon" href="http://imgur.com/frSBVnn">
 <head>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/stylesheet.css">
