--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/stylesheet.css">
 </head>
- <body> 
+ <body>
+   <div class="center"></div>
    <h2>"hi im pingyairlines ecks dhai"</h2>
-   
+   </div>
  </body>
 
 </html>
