--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="css/stylesheet.css">
 </head>
  <body>
-   <div class="center"></div>
+   <div class="center">
    <h2>"hi im pingyairlines ecks dhai"</h2>
    </div>
  </body>
