--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
  <body>
    <div class="center">
-   <h2>"hi im pingyairlines ecks dhai"</h2>
+   <h2>"hi im a pingyairlines kid :)"</h2>
    </div>
  </body>
 
