--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/stylesheet.css">
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 </head>
  <body>
    <div class="center">
