--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html> <title>Pingy Airlines</title>
+<html> 
 <link rel="shortcut icon" href="http://imgur.com/frSBVnn">
 <head>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/stylesheet.css">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
+<title>Pingy Airlines</title>
 </head>
  <body>
    <div class="center">
