--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
  <body>
    <div class="center">
-   <h2>"hi im a pingyairlines kid :)"</h2>
+   <h2>hi im a pingyairlines kid :)</h2>
    </div>
  </body>
 
